<resources>
    <string name="app_name">BMI Calculator</string>
    <string name="weight">Weight (kg)</string>
    <string name="height">Height (cm)</string>
    <string name="BMI">BMI :</string>
    <string name="Calculate">Calculate</string>
    <string name="reset">Reset</string>
    <string name="inputError">error</string>
    <string name="under">under weight</string>
    <string name="normal">normal weight</string>
    <string name="over">overweight</string>
</resources>
